--- a/ansible.cfg
+++ b/ansible.cfg
@@ -5,6 +5,7 @@ collections_paths = ./collections
 host_key_checking = False
 retry_files_enabled = False
 interpreter_python = auto_silent
+vault_password_file = ~/.ansible_vault_pass.txt
 
 [privilege_escalation]
 become = True
